[package]
name = "monedero-signer-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow = "1"
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
monedero-mesh = { path = "../../sessions" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }

[dev-dependencies]
assert_matches = { version = "1.5.0" }
async-trait = "0.1.82"
anyhow = "1"
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "solana_signer"
