[package]
name = "monedero-signer-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
monedero-mesh = { path = "../../sessions" }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true , features = ["full"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }


[dev-dependencies]
anyhow = "1"
assert_matches = { version = "1.5.0" }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "solana_signer"
